--- a/project0/advanced.html
+++ b/project0/advanced.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Search</title>
+        <title>Advanced</title>
         <link rel="stylesheet" href="general.css">
     </head>
     <body>
         <div class="banner">
             <button class="button_hover_box">
-                <button onclick="window.location.href='image.html';" class="search_img">Google Images</button>
+                <button onclick="window.location.href='index.html';" class="search_img">Home Page</button>
             </button>
             <button class="button_hover_box">
-                <button onclick="window.location.href='advanced.html';" class="advanced">Advanced Search</button>
+                <button onclick="window.location.href='image.html';" class="advanced">Google Images</button>
             </button>
         </div>
         <div class="container">
