--- a/project0/image.html
+++ b/project0/image.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Search</title>
+        <title>Image</title>
         <link rel="stylesheet" href="general.css">
     </head>
     <body>
         <div class="banner">
             <button class="button_hover_box">
-                <button onclick="window.location.href='image.html';" class="search_img">Google Images</button>
+                <button onclick="window.location.href='index.html';" class="search_img">Home Page</button>
             </button>
             <button class="button_hover_box">
                 <button onclick="window.location.href='advanced.html';" class="advanced">Advanced Search</button>
@@ -18,6 +18,7 @@
             <div>
                 <form class="form_banner" action="https://www.google.com/search">
                     <input class="search_bar" type="text" name="q">
+                    <input class="img_search_request" type="text" name="tbm" value="isch">
                     <div class="button_container">
                         <input type="submit" value="Google Search">
                         <input type="submit" value="I'm Feeling Lucky">
