--- a/project0/image.html
+++ b/project0/image.html
@@ -5,8 +5,9 @@
         <link rel="stylesheet" href="general.css">
     </head>
     <body>
+        <img class="logo42" src="assets/42_logo_white.png">
         <div class="banner">
-            <button class="button_hover_box">
+        <button class="button_hover_box">
                 <button onclick="window.location.href='index.html';" class="search_img">Home Page</button>
             </button>
             <button class="button_hover_box">
@@ -14,7 +15,10 @@
             </button>
         </div>
         <div class="container">
-            <img class="logo" src="assets/google_logo.png" alt="google_logo">
+            <div class="image_wrapper">
+                <img class="logo" src="assets/google_logo.png" alt="google_logo">
+                <div class="logo_text">images</div>
+            </div>
             <div>
                 <form class="form_banner" action="https://www.google.com/search">
                     <input class="search_bar" type="text" name="q">
